<!--
 strings.xml

 String variables for app

 Worked on by:
 Myanna Harris
 Kristina Spring
 Jasmine Jans
 Jimmy Sherman

 Last Edit: 5-6-17

 Copyright 2017 Myanna Harris, Jasmine Jans, James Sherman, Kristina Spring

 This file is part of DragonAcademy.

 DragonAcademy is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, version 3 of the License. All redistributions
 of the app or modifications of the app are to remain free in accordance
 with the GNU General Public License.

 DragonAcademy is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with DragonAcademy.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <!-- App name -->
    <string name="app_name">Dragon Academy</string>


    <!-- Home page buttons -->
    <string name="continue_lesson">Current Lesson</string>
    <string name="learn">Classroom</string>
    <string name="play">Arcade</string>
    <string name="achievements">Achievements</string>
    <string name="tools">Tools</string>
    <string name="settings">Settings</string>

    <!-- Tool buttons and text -->
    <string name="toolSample">Tool Sample</string>

    <!-- Lesson buttons and text -->
    <string name="next">Next</string>
    <string name="lessonConcepts">Math Concepts</string>
    <string name="lessonConcept">Open Math Concept 1</string>
    <string name="lessonNames">Math Lessons</string>
    <string name="lessonSummary">Lesson Summary</string>
    <string name="lessonSteps">Explanation</string>
    <string name="lessonExample">Example</string>
    <string name="lessonQuestions">Lesson Questions</string>
    <string name="lessonGameButton">Open Lesson Game</string>
    <string name="noNewAccessory">You finished the lesson! Unfortunately, you\'ve already received
        an accessory for this lesson. Complete a new lesson to earn more accessories!</string>
    <string name="pick">Choose where you\'d like to go next!</string>

    <!-- Login page -->
    <string name="login">Login</string>
    <string name="login_question">What should we call you?</string>
    <string name="username_message">Name</string>

    <!-- Game -->
    <string name="redo_screen">Let\'s cover a few more things before you move on.</string>


    <!-- Settings strings START -->

    <string name="setting_title">All Settings</string>


    <!-- Reminder -->
    <string name="reminder_title">Reminder</string>

    <!-- Username -->
    <string name="username_title">Change Username</string>

    <!-- Text size-->
    <string name="text_size_title">Change Text Size</string>
    <string name="text_size_summary">Select app text size.</string>
    <string name="text_size_default">Medium</string>

    <!-- Reset App -->
    <string name="reset_app_title">Reset App</string>
    <string name="reset_app_summary">Click to reset app progress.</string>

    <!-- Settings strings END -->


    <!-- Sprite -->
    <string name="sprite">Lair</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Notifications -->
    <string name="daily_notification_title_template">%1$s</string>
    <string name="daily_notification_placeholder_text_template">You said %1$s.
        The best way learn a skill is to practice every day!
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string name="title_activity_achievement_pop_up">AchievementPopUp</string>

    <string name="title_activity_frac_to_dec_tool">Fraction To Decimal Tool</string>
    <string name="title_activity_geo_assist_tool">Geo Assist</string>
    <string name="title_activity_slope_calc_tool">Slope Calculator</string>
    <string name="title_activity_formula_memorization_tool">Formula Memorization</string>
    <string name="title_activity_place_value_tool">Place Values</string>
    <string name="title_activity_coord_plane_tool">Coordinate Plane</string>

    <!-- Sprite Page Combo Box -->
    <string-array name="accessories_array">
        <item>All</item>
        <item>Glasses</item>
        <item>Shirts</item>
        <item>Hats</item>
        <item>Specials</item>
    </string-array>
    
    <!-- Next Gen Zone Links -->
    <string name="ngzlinks_explanation">This app was made for the Next Generation Zone, an organization in Spokane, WA dedicated to helping young adults complete their education and prepare for a career that suits them.  The following links are specifically for students at the Next Generation Zone, but others may find them helpful as well!</string>
    <string name="Home"><a href = "http://www.nextgenzone.org/">HOME</a></string>
    <string name="Passport"><a href = "http://www.nextgenzone.org/passport-to-success/">PASSPORT</a></string>
    <string name="Information"><a href = "http://www.nextgenzone.org/what-we-do/">WHAT WE DO</a></string>
    <string name="Who"><a href = "http://www.nextgenzone.org/who-we-are/">WHO WE ARE</a></string>
    <string name="Job"><a href = "http://www.nextgenzone.org/find-a-job/">JOB SEARCH</a></string>
    <string name="Resources"><a href = "http://www.nextgenzone.org/resources">RESOURCES</a></string>

</resources>
