<?xml version="1.0" encoding="utf-8"?>

<!--
 activity_login.xml

 Login screen layout

 Worked on by:
 Myanna Harris
 Kristina Spring
 Jasmine Jans
 Jimmy Sherman

 Last Edit: 10-26-16
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gedappgui.gedappgui.Login">

    <TextView
        android:layout_height="100dp"
        android:layout_width="match_parent"
        android:id="@+id/login_title"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="50sp" />

    <TextView
        android:layout_height="100dp"
        android:layout_width="match_parent"
        android:id="@+id/login_text"
        android:text="@string/login_question"
        android:gravity="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/username_message"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/username_message" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/continue_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/button_vert_margin"
        android:layout_marginTop="@dimen/button_vert_margin"
        android:text="@string/login"
        android:onClick="setLogin" />

</LinearLayout>
