<?xml version="1.0" encoding="utf-8"?>

<!--
 activity_main.xml

 Layout for Home screen

 Worked on by:
 Myanna Harris
 Kristina Spring
 Jasmine Jans
 Jimmy Sherman

 Last Edit: 10-26-16
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gedappgui.gedappgui.MainActivity">

    <android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:grid="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:id="@+id/sprite_home_grid"

        grid:alignmentMode="alignBounds"
        grid:columnCount="2"
        grid:rowOrderPreserved="false"
        grid:useDefaultMargins="true"
        tools:context="com.gedappgui.gedappgui.MainActivity">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="250dp"
            grid:layout_columnWeight="4"
            grid:layout_gravity="fill_horizontal"

            android:gravity="center"
            android:id="@+id/sprite_homeScreen"
            android:scaleType="fitCenter"

            android:src="@drawable/layers"
            android:contentDescription="@string/sprite"
            android:onClick="goToSprite"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="200dp"
            grid:layout_columnWeight="3"
            grid:layout_gravity="fill_horizontal"

            android:scaleType="center"
            android:id="@+id/sprite_speechBubble"
            android:background="@drawable/speech_bubble"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.v7.widget.GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="See your progress below!"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sprite_home_grid"
        android:id="@+id/see_progress"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_height="11dp"
        android:layout_width="match_parent"
        android:layout_below="@id/see_progress"
        android:padding="12dp"
        android:layout_centerHorizontal="true"
        android:maxHeight="11dp"
        android:max = "24"
        android:progress = "0" />

    <android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:grid="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:padding="4dp"

        android:layout_below="@id/progressBar"
        android:id="@+id/button_home_grid"

        grid:alignmentMode="alignBounds"
        grid:columnCount="2"
        grid:rowOrderPreserved="false"
        grid:useDefaultMargins="true"
        tools:context="com.gedappgui.gedappgui.MainActivity">

        <!--<GridView
            android:id="@+id/home_gridView"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sprite_homeScreen"
            android:numColumns="2"
            android:gravity="center"
            android:stretchMode="columnWidth"
            android:columnWidth="60dp">

        </GridView>-->


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            grid:layout_rowWeight="1"

            android:padding="7dp"

            android:id="@+id/continue_button"
            android:text="@string/continue_lesson"
            android:onClick="goToContinueLesson" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:padding="7dp"

            android:id="@+id/learn_button"
            android:text="@string/learn"
            android:onClick="goToLearn"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:padding="7dp"

            android:id="@+id/achievements_button"
            android:text="@string/achievements"
            android:onClick="goToAchievements"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:padding="7dp"

            android:id="@+id/play_button"
            android:text="@string/play"
            android:onClick="goToPlay"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:padding="7dp"

            android:id="@+id/tools_button"
            android:text="@string/tools"
            android:onClick="goToTools"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:padding="7dp"

            android:id="@+id/settings_button"
            android:text="@string/settings"
            android:onClick="goToSettings" />

    </android.support.v7.widget.GridLayout>

</RelativeLayout>